--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "shmavgeniyapp",
+  "name": "smavgeniyapp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.3.2",
-    "sass": "^1.58.0",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
+    "axios": "^1.3.4",
+    "sass": "^1.58.3",
     "scss": "^0.2.4",
-    "vue": "^3.2.45",
+    "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "npm-run-all": "^4.1.5",
-    "typescript": "~4.7.4",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12"
+    "vite": "^4.1.4"
   }
 }
